--- a/ios/ProjectWProvider/Info.plist
+++ b/ios/ProjectWProvider/Info.plist
@@ -55,5 +55,7 @@
 		<string>KumbhSans-Regular.ttf</string>
 		<string>KumbhSans-SemiBold.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
 </dict>
 </plist>
