--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "react-native-vision-camera": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
