--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-simple-toast": "^3.3.1",
     "react-native-svg": "^15.2.0",
     "react-native-vision-camera": "^4.2.0"
   },
