--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,9 +27,10 @@ end
 
 target 'ProjectWProvider' do
   config = use_native_modules!
+
+  use_frameworks! :linkage => :static
   
   # React Native Maps dependencies
-
   rn_maps_path = '../node_modules/react-native-maps'
   pod 'react-native-google-maps', :path => rn_maps_path
 
@@ -39,7 +40,7 @@ target 'ProjectWProvider' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
