--- a/ios/ProjectWProvider/Info.plist
+++ b/ios/ProjectWProvider/Info.plist
@@ -57,5 +57,7 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your Photos.</string>
 </dict>
 </plist>
