--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "^0.73.6",
     "react-native-camera": "^4.2.1",
