--- a/ios/ProjectWProvider/Info.plist
+++ b/ios/ProjectWProvider/Info.plist
@@ -31,8 +31,22 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your camera to upload photos from your device.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your photos to upload from your library.</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>$(PRODUCT_NAME) requires your permission to track in order to show you more relevant events.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>KumbhSans-Bold.ttf</string>
+		<string>KumbhSans-Light.ttf</string>
+		<string>KumbhSans-Medium.ttf</string>
+		<string>KumbhSans-Regular.ttf</string>
+		<string>KumbhSans-SemiBold.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -47,17 +61,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>KumbhSans-Bold.ttf</string>
-		<string>KumbhSans-Light.ttf</string>
-		<string>KumbhSans-Medium.ttf</string>
-		<string>KumbhSans-Regular.ttf</string>
-		<string>KumbhSans-SemiBold.ttf</string>
-	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your Photos.</string>
 </dict>
 </plist>
