--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "^3.30.1",
     "react-native-simple-toast": "^3.3.1",
     "react-native-svg": "^15.2.0",
+    "react-native-tracking-transparency": "^0.1.2",
     "react-native-vision-camera": "^4.2.0"
   },
   "devDependencies": {
