--- a/ios/ProjectWProvider/Info.plist
+++ b/ios/ProjectWProvider/Info.plist
@@ -32,9 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your camera to upload photos from your device.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your location to show you relevant events and venues.</string>
+	<string>$(PRODUCT_NAME) needs access to your camera to upload photos for events and venue.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs access to your photos to upload from your library.</string>
 	<key>NSUserTrackingUsageDescription</key>
